fixed logo unclickable on small screen

--- a/public/styles.css
+++ b/public/styles.css
@@ -17,6 +17,7 @@ header {
 .logo {
   display: flex;
   flex-direction: row;
+  z-index: 1;
 }
 
 .logo img {
